updated to support postgis

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,7 @@ newest = false
 
 [django]
 recipe = djangorecipe
-version = 1.0
+version = 1.1
 project = news21national
 extra-paths =
   ${buildout:directory}/apps/news21-ams
@@ -14,6 +14,7 @@ extra-paths =
   ${django-imagekit:location}
   ${python-googleanalytics:location}/src
   ${django-googlecharts:location}
+  ${django-geotagging:location}
 eggs = django-registration==0.7
   django-authopenid==1.0.1
   feedparser==4.1
@@ -31,7 +32,11 @@ urls =
   http://django-tagging.googlecode.com/svn/trunk/ django-tagging
   http://svn.aeracode.org/svn/south/trunk south
   http://django-audioplayer.googlecode.com/svn/trunk/ django-audioplayer
-  
+
+[django-geotagging]
+recipe = zerokspot.recipe.git
+repository = git://github.com/lincolnloop/django-geotagging.git
+branch = inline-widget
 
 [django-imagekit]
 recipe = mercurialrecipe
