added avatar, messaging, announcments, analytic report

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,6 @@
 [buildout]
 parts = PIL svn-extras django
+eggs  =	psycopg2
 newest = false
 
 [django]
@@ -11,14 +12,28 @@ extra-paths =
   ${svn-extras:location}/django-tagging
   ${svn-extras:location}/south
   ${svn-extras:location}/django-audioplayer
+  ${svn-extras:location}/django-syncr
+  ${svn-extras:location}/django-cron
+  ${svn-extras:location}/django-atompub
+  ${svn-extras:location}/django-oembed
+  ${svn-extras:location}/django-messages
+  ${svn-extras:location}/django-mobileadmin
+  ${svn-extras:location}/django-discussion
   ${django-imagekit:location}
   ${python-googleanalytics:location}/src
   ${django-googlecharts:location}
   ${django-geotagging:location}
-eggs = django-registration==0.7
-  django-authopenid==1.0.1
-  feedparser==4.1
+  ${django-avatar:location}
+  ${django-announcements:location}
+  ${markdown:location}
+  ${uni-form:location}
+  ${django-authopenid:location}
+  ${django-registration:location}
+  ${django-notification:location}
+eggs = feedparser==4.1
   PIL
+  python-openid==2.2.4
+  ${buildout:eggs}
 wsgi = true
 
 [PIL]
@@ -32,11 +47,47 @@ urls =
   http://django-tagging.googlecode.com/svn/trunk/ django-tagging
   http://svn.aeracode.org/svn/south/trunk south
   http://django-audioplayer.googlecode.com/svn/trunk/ django-audioplayer
+  http://django-syncr.googlecode.com/svn/trunk/ django-syncr	
+  http://django-cron.googlecode.com/svn/trunk/ django-cron
+  http://django-atompub.googlecode.com/svn/trunk/ django-atompub
+  http://django-oembed.googlecode.com/svn/trunk/ django-oembed
+  http://django-messages.googlecode.com/svn/trunk/ django-messages
+  http://django-mobileadmin.googlecode.com/svn/trunk/ django-mobileadmin
+  http://django-discussion.googlecode.com/svn/trunk/ django-discussion/discussion
+
+[markdown]
+recipe = zerokspot.recipe.git
+repository = git://gitorious.org/python-markdown/mainline.git
+
+[django-announcements]
+recipe = zerokspot.recipe.git
+repository = git://github.com/pinax/django-announcements.git
+
+[uni-form]
+recipe = zerokspot.recipe.git
+repository = git://github.com/pydanny/django-uni-form.git
+
+[django-avatar]
+recipe = zerokspot.recipe.git
+repository = git://github.com/ericflo/django-avatar.git
 
 [django-geotagging]
 recipe = zerokspot.recipe.git
 repository = git://github.com/lincolnloop/django-geotagging.git
 branch = inline-widget
+
+[django-notification]
+recipe = zerokspot.recipe.git
+repository = git://github.com/jtauber/django-notification.git
+
+
+[django-registration]
+recipe = mercurialrecipe
+repository = http://bitbucket.org/ubernostrum/django-registration/
+
+[django-authopenid]
+recipe = mercurialrecipe
+repository = http://bitbucket.org/benoitc/django-authopenid/
 
 [django-imagekit]
 recipe = mercurialrecipe
