--- a/buildout.cfg
+++ b/buildout.cfg
@@ -24,12 +24,14 @@ extra-paths =
   ${django-googlecharts:location}
   ${django-geotagging:location}
   ${django-avatar:location}
-  ${django-announcements:location}
+  ${django-ajax-validation:location}
   ${markdown:location}
   ${uni-form:location}
+  ${django-announcements:location}
   ${django-authopenid:location}
   ${django-registration:location}
   ${django-notification:location}
+  ${django-debug-toolbar:location}
 eggs = feedparser==4.1
   PIL
   python-openid==2.2.4
@@ -55,6 +57,11 @@ urls =
   http://django-mobileadmin.googlecode.com/svn/trunk/ django-mobileadmin
   http://django-discussion.googlecode.com/svn/trunk/ django-discussion/discussion
 
+
+[django-debug-toolbar]
+recipe = zerokspot.recipe.git
+repository = git://github.com/robhudson/django-debug-toolbar.git
+
 [markdown]
 recipe = zerokspot.recipe.git
 repository = git://gitorious.org/python-markdown/mainline.git
@@ -66,6 +73,10 @@ repository = git://github.com/pinax/django-announcements.git
 [uni-form]
 recipe = zerokspot.recipe.git
 repository = git://github.com/pydanny/django-uni-form.git
+
+[django-ajax-validation]
+recipe = zerokspot.recipe.git
+repository = git://github.com/alex/django-ajax-validation.git
 
 [django-avatar]
 recipe = zerokspot.recipe.git
