added cms, added is_active to profile

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,6 +9,7 @@ version = 1.1
 project = news21national
 extra-paths =
   ${buildout:directory}/apps/news21-ams
+  ${svn-extras:location}/django-mptt
   ${svn-extras:location}/django-tagging
   ${svn-extras:location}/south
   ${svn-extras:location}/django-audioplayer
@@ -32,6 +33,7 @@ extra-paths =
   ${django-registration:location}
   ${django-notification:location}
   ${django-debug-toolbar:location}
+  ${feincms:location}
 eggs = feedparser==4.1
   PIL
   python-openid==2.2.4
@@ -56,7 +58,11 @@ urls =
   http://django-messages.googlecode.com/svn/trunk/ django-messages
   http://django-mobileadmin.googlecode.com/svn/trunk/ django-mobileadmin
   http://django-discussion.googlecode.com/svn/trunk/ django-discussion/discussion
+  http://django-mptt.googlecode.com/svn/trunk/ django-mptt
 
+[feincms]
+recipe = zerokspot.recipe.git
+repository = git://github.com/matthiask/feincms.git
 
 [django-debug-toolbar]
 recipe = zerokspot.recipe.git
