updated most forms to uni-form, added video and embed asset types

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -20,6 +20,7 @@ extra-paths =
   ${svn-extras:location}/django-messages
   ${svn-extras:location}/django-mobileadmin
   ${svn-extras:location}/django-discussion
+  ${svn-extras:location}/exif-py
   ${django-imagekit:location}
   ${python-googleanalytics:location}/src
   ${django-googlecharts:location}
@@ -59,6 +60,7 @@ urls =
   http://django-mobileadmin.googlecode.com/svn/trunk/ django-mobileadmin
   http://django-discussion.googlecode.com/svn/trunk/ django-discussion/discussion
   http://django-mptt.googlecode.com/svn/trunk/ django-mptt
+  http://exif-py.svn.sourceforge.net/svnroot/exif-py/source/ exif-py
 
 [feincms]
 recipe = zerokspot.recipe.git
