update partner to show icons

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -25,6 +25,7 @@ extra-paths =
   ${svn-extras:location}/django-mobileadmin
   ${svn-extras:location}/django-discussion
   ${svn-extras:location}/exif-py
+  ${svn-extras:location}/geopy
   ${django-imagekit:location}
   ${python-googleanalytics:location}/src
   ${django-googlecharts:location}
@@ -61,6 +62,7 @@ urls =
   http://django-discussion.googlecode.com/svn/trunk/ django-discussion/discussion
   http://django-mptt.googlecode.com/svn/trunk/ django-mptt
   http://exif-py.svn.sourceforge.net/svnroot/exif-py/source/ exif-py
+  http://geopy.googlecode.com/svn/trunk/ geopy
 
 [feincms]
 recipe = zerokspot.recipe.git
