--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,4 @@ news21national/media/ik_cache/*
 news21national/media/avatars/*
 logs/*
 news21national/media/admin_media
-rewrite.conf
+news21national/rewrite.conf
