added geopoint address search for geotagging

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,6 +13,7 @@ recipe = djangorecipe
 version = 1.1
 project = news21national
 extra-paths =
+  ${svn-extras:location}/simplejson
   ${svn-extras:location}/django-mptt
   ${svn-extras:location}/django-tagging
   ${svn-extras:location}/south
@@ -50,6 +51,7 @@ wsgi = true
 [svn-extras]
 recipe = iw.recipe.subversion
 urls =
+  http://simplejson.googlecode.com/svn/trunk/ simplejson
   http://django-tagging.googlecode.com/svn/trunk/ django-tagging
   http://svn.aeracode.org/svn/south/trunk south
   http://django-audioplayer.googlecode.com/svn/trunk/ django-audioplayer
