--- a/news21national/templates/n21alpha/api/v2/projects.json
+++ b/news21national/templates/n21alpha/api/v2/projects.json
@@ -1,5 +1,5 @@
 {% if callback %}{{callback}}({% endif %}{"projects":[
     {% for project in projects %}
-    { "name":"{{ project.name }}", "thumbnail":"{{ project.thumbnail }}", "screenshot":"{{ project.screenshot }}", "description":"{{ project.description }}","year":"{{ project.started_at.year }}" }{% if not forloop.last %},{% endif %}
+    { "name":"{{ project.name }}", "thumbnail":"{{ MEDIA_URL }}{{ project.thumbnail }}", "screenshot":"{{ MEDIA_URL }}{{ project.screenshot }}", "description":"{{ project.description }}","year":"{{ project.started_at.year }}" }{% if not forloop.last %},{% endif %}
     {% endfor %}
 ]}{% if callback %}){% endif %}
