made story created_at editable, updated to latest django

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,7 +10,7 @@ find-links    = http://dist.plone.org/thirdparty/
 
 [django]
 recipe = djangorecipe
-version = 1.1
+version = 1.2.5
 project = news21national
 extra-paths =
   ${svn-extras:location}/simplejson
@@ -76,7 +76,7 @@ repository = git://github.com/robhudson/django-debug-toolbar.git
 
 [markdown]
 recipe = zerokspot.recipe.git
-repository = git://gitorious.org/python-markdown/mainline.git
+repository = http://git.gitorious.org/python-markdown/mainline.git
 
 [django-announcements]
 recipe = zerokspot.recipe.git
